# Gerenciador-de-musica

./: CMakeLists.txt  README.md
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_linked_list-members.html  class_linked_list.html  class_linked_list.js  class_linked_list__coll__graph.dot  class_list_of_playlists-members.html  class_list_of_playlists.html  class_list_of_playlists.js  class_list_of_playlists__coll__graph.dot  class_playlist-members.html  class_playlist.html  class_playlist.js  class_playlist__coll__graph.dot  class_song-members.html  class_song.html  class_song.js  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.dot  graph_legend.html  index.html  lista_ligada_8cpp.html  lista_ligada_8cpp__incl.dot  lista_ligada_8cpp_source.html  lista_ligada_8h.html  lista_ligada_8h.js  (+54 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  (+18 more)
include/: listaLigada.h  listaPlaylists.h  musica.h  playlist.h  utilitarios.h
src/: listaLigada.cpp  listaPlaylists.cpp  main.cpp  musica.cpp  playlist.cpp  utilitarios.cpp
